--- a/blog/034.md
+++ b/blog/034.md
@@ -7,4 +7,67 @@ _2015-07-10 20:43:29_
 
 * * *
 
-content
+意图：
+
+给定一个语言，定义它的文法的一种表示，并定义一个解释器，这个解释器使用该表示来解释语言中的句子。
+
+结构图：来自 《23种设计模式 - 郗晓勇》
+
+![](./img/034_1.png)
+
+实现：https://github.com/panshiqu/patterns/tree/master/Interpreter
+
+AbstractExpression
+
+```
+namespace NS_INTERPRETER {
+
+class AbstractExpression {
+public:
+	AbstractExpression() {}
+	virtual ~AbstractExpression() {}
+	virtual bool interpret(bool status) = 0;
+};
+
+} /* namespace NS_INTERPRETER */
+```
+
+ConcreteExpression
+
+```
+#include "AbstractExpression.h"
+
+namespace NS_INTERPRETER {
+
+class ConcreteExpression : public AbstractExpression
+{
+public:
+	ConcreteExpression() {}
+	virtual ~ConcreteExpression() {}
+	virtual bool interpret(bool status)
+	{
+		// 可能存在多个这样的子类
+		// 传参可能也不止BOOL类型这样简单
+		// 这里只是想表达这个子类可以按照自己的方式解释这个参数
+		return !status;
+	}
+};
+
+} /* namespace NS_INTERPRETER */
+```
+
+main
+
+```
+#include <iostream>
+#include "Interpreter/ConcreteExpression.h"
+using namespace NS_INTERPRETER;
+using namespace std;
+int main(void)
+{
+	ConcreteExpression ce;
+	std::cout << ce.interpret(false) << std::endl;
+}
+```
+
+附加：
